--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled0.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMXqnqjE9ZT4jUTYYWNARsD",
+      "authorship_tag": "ABX9TyPG7HUV8dlHl3HOzsSGg3U3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,28 +26,6 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/SueHolder/OVFAcademy/blob/main/Untitled0.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "GyO-xymNyarC"
-      },
-      "outputs": [],
-      "source": [
-        "#Example"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        " "
-      ],
-      "metadata": {
-        "id": "6uaneDdtyi7d"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -95,7 +73,7 @@
           "height": 246
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -150,7 +128,7 @@
           "height": 664
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -471,13 +449,66 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "#@title Default title text\n",
+        "# for loop\n",
+        "fruits = ['apple','pear', 'cherry']\n",
+        "for i in fruits:\n",
+        "  print(i)"
       ],
       "metadata": {
-        "id": "cRISACLH7G89"
+        "id": "cRISACLH7G89",
+        "cellView": "code",
+        "outputId": "04c11499-706c-4224-c675-94f75637a86e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "apple\n",
+            "pear\n",
+            "cherry\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Functions\n",
+        "def awesome_sue_function_to_calculate_area(a=3, b=7):\n",
+        "  '''\n",
+        "Function in order to calculate the area of a rectangle\n",
+        "Parameters;\n",
+        "a:a represents the length\n",
+        "b:b represents the widuth\n",
+        "  '''\n",
+        "  my_area = a*b\n",
+        "  return = my_area\n"
+      ],
+      "metadata": {
+        "id": "6uaneDdtyi7d"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "GyO-xymNyarC"
+      },
+      "outputs": [],
+      "source": [
+        "# We will use it in order to delete all the element of a list having a particular value:\n",
+        "Last_list = [0,1,2,3,4,5,888,6,7,888,8,888,9] # let's delete all the 888\n",
+        "valueToBeRemoved = 888\n",
+        "Last_list = [element for ele]"
+      ]
     }
   ]
 }
