--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled0.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPG7HUV8dlHl3HOzsSGg3U3",
+      "authorship_tag": "ABX9TyOPVndhVrLEFt+IKYdYHuGW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -449,6 +449,142 @@
     {
       "cell_type": "code",
       "source": [
+        "# Focus on list\n",
+        "\n",
+        "cities = ['paris', 'Zurich', 'Rome', 'Berlin', 'London']\n",
+        "\n",
+        "type(cities)\n",
+        "\n",
+        "#Python is 0 based\n",
+        "cities[-3]\n",
+        "\n",
+        "cities[2] = 'milan'\n",
+        "print(cities)\n",
+        "cities.insert(2, 'HK')\n",
+        "print(cities)\n",
+        "\n",
+        "cities.append('Rio')\n",
+        "print(cities)\n",
+        "\n",
+        "cities.insert(-1,'nice')\n",
+        "print(cities)\n",
+        "\n",
+        "cities.remove('paris') # Remove function, will remove ONLY the first element to remove\n",
+        "print(cities)\n",
+        "\n",
+        "cities.insert(2, 100)\n",
+        "print(cities)\n"
+      ],
+      "metadata": {
+        "id": "d9szWzyoKLej",
+        "outputId": "abb8deda-c525-48fb-ee6c-7f51767816ee",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['paris', 'Zurich', 'milan', 'Berlin', 'London']\n",
+            "['paris', 'Zurich', 'HK', 'milan', 'Berlin', 'London']\n",
+            "['paris', 'Zurich', 'HK', 'milan', 'Berlin', 'London', 'Rio']\n",
+            "['paris', 'Zurich', 'HK', 'milan', 'Berlin', 'London', 'nice', 'Rio']\n",
+            "['Zurich', 'HK', 'milan', 'Berlin', 'London', 'nice', 'Rio']\n",
+            "['Zurich', 'HK', 100, 'milan', 'Berlin', 'London', 'nice', 'Rio']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Python is 0 based\n",
+        "cities[-3]\n",
+        "\n",
+        "cities[2] = 'milan'\n",
+        "print(cities)\n",
+        "cities.insert(2, 'HK')\n",
+        "print(cities)\n",
+        "\n",
+        "cities.append('Rio')\n",
+        "print(cities)\n",
+        "\n",
+        "cities.insert(-1,'nice')\n",
+        "print(cities)\n",
+        "\n",
+        "cities.insert(2, 100)\n",
+        "print(cities)\n",
+        "\n",
+        "cities.insert(7,'100')\n",
+        "print(cities)\n"
+      ],
+      "metadata": {
+        "id": "roC8K3OpUMre",
+        "outputId": "f30705e1-69b9-4e3b-f75a-5a3c5c9ad5be",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['Zurich', 'HK', 'milan', 'milan', 'milan', 'Berlin', 'London', 'nice', 'Rio', 'nice', 'Rio']\n",
+            "['Zurich', 'HK', 'HK', 'milan', 'milan', 'milan', 'Berlin', 'London', 'nice', 'Rio', 'nice', 'Rio']\n",
+            "['Zurich', 'HK', 'HK', 'milan', 'milan', 'milan', 'Berlin', 'London', 'nice', 'Rio', 'nice', 'Rio', 'Rio']\n",
+            "['Zurich', 'HK', 'HK', 'milan', 'milan', 'milan', 'Berlin', 'London', 'nice', 'Rio', 'nice', 'Rio', 'nice', 'Rio']\n",
+            "['Zurich', 'HK', 100, 'HK', 'milan', 'milan', 'milan', 'Berlin', 'London', 'nice', 'Rio', 'nice', 'Rio', 'nice', 'Rio']\n",
+            "['Zurich', 'HK', 100, 'HK', 'milan', 'milan', 'milan', '100', 'Berlin', 'London', 'nice', 'Rio', 'nice', 'Rio', 'nice', 'Rio']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "new_list = [1,3,5,2]\n",
+        "new_list[1] -33\n",
+        "cities = cities + new_list\n",
+        "print(cities)"
+      ],
+      "metadata": {
+        "id": "mRvMjeH6VtrM",
+        "outputId": "22648b3f-6af7-44fc-a923-56d9496871fb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['Zurich', 'HK', 100, 'HK', 'milan', 'milan', 'milan', '100', 'Berlin', 'London', 'nice', 'Rio', 'nice', 'Rio', 'nice', 'Rio', 1, 3, 5, 2, 1, 3, 5, 2]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "val = 0\n",
+        "print('The value is positive')"
+      ],
+      "metadata": {
+        "id": "WyBwXjm2e258"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#@title Default title text\n",
         "# for loop\n",
         "fruits = ['apple','pear', 'cherry']\n",
@@ -458,12 +594,12 @@
       "metadata": {
         "id": "cRISACLH7G89",
         "cellView": "code",
-        "outputId": "04c11499-706c-4224-c675-94f75637a86e",
+        "outputId": "9a29cd9c-b3d9-4647-fb09-073c659a42fb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
