--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled0.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOPVndhVrLEFt+IKYdYHuGW",
+      "authorship_tag": "ABX9TyPi6l2+CpTHqsq8vg9nnUxx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -482,7 +482,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -528,7 +528,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -559,7 +559,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -574,13 +574,35 @@
       "cell_type": "code",
       "source": [
         "val = 0\n",
-        "print('The value is positive')"
+        "if val>0:\n",
+        "  print('The value is positive')\n",
+        "\n",
+        "elif val<0:\n",
+        "  print('The value is negative')\n",
+        "\n",
+        "elif val<-10:\n",
+        "  print('Very low')\n",
+        "\n",
+        "else:\n",
+        "  print('The value equals 0')"
       ],
       "metadata": {
-        "id": "WyBwXjm2e258"
+        "id": "WyBwXjm2e258",
+        "outputId": "3369c82e-3dfc-4561-e084-754743f0740d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The value equals 0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -599,7 +621,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
