--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled0.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM1eylUIh0fJ73LxGb9wfzy",
+      "authorship_tag": "ABX9TyNp3JQqMebdeYQ8XAdiVNFy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -73,7 +73,7 @@
           "height": 246
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -128,7 +128,7 @@
           "height": 635
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -752,7 +752,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -813,7 +813,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -853,7 +853,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "GyO-xymNyarC",
         "outputId": "f6229625-9fd7-49e7-ad23-2ee795738f0a",
@@ -904,7 +904,7 @@
       "metadata": {
         "id": "bZnhBd9FTfR1"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -927,7 +927,7 @@
       "metadata": {
         "id": "KQJ2ZFC9U6eY"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1008,7 +1008,7 @@
           "height": 652
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1471,7 +1471,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1497,7 +1497,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1562,7 +1562,7 @@
           "height": 300
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1798,7 +1798,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1865,7 +1865,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1891,7 +1891,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1924,7 +1924,7 @@
           "height": 112
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2119,7 +2119,7 @@
           "height": 1000
         }
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2936,7 +2936,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2975,27 +2975,10 @@
         "df['Advertisement Date'] = pd.to_datetime(df['Advertisement Date'], format=\"%Y-%m-%d\")"
       ],
       "metadata": {
-        "id": "8YyCde9APXuL",
-        "outputId": "c4ee0d5b-27b4-4858-e8d7-3e8f2b8b6642",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 200
-        }
+        "id": "8YyCde9APXuL"
       },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-2-6033cd9bfa83>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# For the moment, python understand Advertisement Date as a chain of characters\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m# You need to tell him that this is a Date\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Advertisement Date'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_datetime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Advertisement Date'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mformat\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"%Y-%m-%d\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -3003,27 +2986,240 @@
         "df['Advertisement Date'].head()"
       ],
       "metadata": {
-        "id": "CnzcYlUpPa2u",
-        "outputId": "3a43d698-81db-4154-9cc7-c303bd3cbf2f",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 165
-        }
+        "id": "CnzcYlUpPa2u"
       },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-1-e8077941acbe>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Advertisement Date'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df['Length'].unique()\n",
+        "df['Engine Hours'].unique()\n",
+        "df['Fresh Water Cap'].unique()"
+      ],
+      "metadata": {
+        "id": "wLiwhmrc2KS3"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Delete the chain ' m'\n",
+        "df['Length'] = df['Length'].str.rstrip(' m')\n",
+        "\n",
+        "# Convert Series in numeric\n",
+        "df['Length'] = pd.to_numeric(df['Length'])\n",
+        "\n",
+        "df['Length'].head()"
+      ],
+      "metadata": {
+        "id": "HXl6sgah2Uv3"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def format_series(series, char):\n",
+        "    \n",
+        "    new_series = series.str.rstrip(char)\n",
+        "    new_series = pd.to_numeric(new_series)\n",
+        "    \n",
+        "    return new_series"
+      ],
+      "metadata": {
+        "id": "oLuYs5j92fpl"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for col in ['Width', 'Depth']:\n",
+        "    df[col] = format_series(df[col], ' m')\n",
+        "\n",
+        "df[\"Engine Hours\"] = format_series(df[\"Engine Hours\"], ' h')\n",
+        "\n",
+        "for col in ['Fresh Water Cap', 'Holding Tank', 'Fuel Capacity']:\n",
+        "    df[col] = format_series(df[col], ' l')\n",
+        "    \n",
+        "df[['Length', 'Width', 'Depth']].head()\n",
+        "\n",
+        "df = df.rename(columns={'Length':'Length (m)', 'Width':'Width (m)', 'Depth':'Depth (m)',\n",
+        "                        'Fresh Water Cap':'Fresh Water Cap (l)', 'Holding Tank':'Holding Tank (l)', 'Fuel Capacity':'Fuel Capacity (l)'})"
+      ],
+      "metadata": {
+        "id": "lR2dD8CT2nhn"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Let's see if we have constant features\n",
+        "col_object_l = df.select_dtypes(include='object').columns # Stock les colonnes\n",
+        "\n",
+        "for col in col_object_l:\n",
+        "    print(f\"Column {col} has {df[col].nunique()} categories\\n\")"
+      ],
+      "metadata": {
+        "id": "Bh6M7Uq421op"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df = df.drop(columns='Category') # Category has just one category"
+      ],
+      "metadata": {
+        "id": "cRb7Tstw3Twp"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Let's delete the features that we can't use:\n",
+        "list_col_to_delete_part1 = [\"Displacement\", \"Number of views last 7 days\", \"Comments\", \"Additional Comments\"]\n",
+        "\n",
+        "df.drop(columns = list_col_to_delete_part1, inplace = True)"
+      ],
+      "metadata": {
+        "id": "zvu9d6Gl3WbF"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Now let's split the data in 2 parts for the moment:\n",
+        "# train_val & test\n",
+        "# Split will be done on a temporal basis\n",
+        "df.set_index(['Advertisement Date']).resample('M').size()"
+      ],
+      "metadata": {
+        "id": "7QoMLcpk3caJ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Let's have Train & Validation for the data of 2020 and Test for the data of 2021\n",
+        "train_val = df[df['Advertisement Date'] < '2021-01-01'].reset_index(drop=True)\n",
+        "\n",
+        "# Création du test\n",
+        "test = df[df['Advertisement Date'] >= '2021-01-01'].reset_index(drop=True)"
+      ],
+      "metadata": {
+        "id": "xVTvSoRL3jAm"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_val.duplicated(keep=False)"
+      ],
+      "metadata": {
+        "id": "gUG_n_uw3rVM"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(f'The database has {train_val[train_val.duplicated(keep=False)].shape[0]} true duplicates')"
+      ],
+      "metadata": {
+        "id": "nPVDMwYZ3zQP"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Now let's identify the false duplicates. In general we have a unique ID for a client, given that it is not the case in this databse, we will consider that an observation is unique if the observation are the same for those 5 features: ['Model', 'Type', 'Year Built','Location', 'Equipment']"
+      ],
+      "metadata": {
+        "id": "QX4To6IW54S2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 5 features to represents a unique boat.\n",
+        "features_analyze_duplicates = ['Model', 'Type', 'Year Built','Location', 'Equipment']\n",
+        "\n",
+        "# sort the features for a better display of the false duplicates\n",
+        "cols_sort = features_analyze_duplicates + [col for col in train_val.columns if col not in features_analyze_duplicates]\n",
+        "\n",
+        "# false duplicates\n",
+        "train_val[train_val.duplicated(subset = features_analyze_duplicates, keep=False)][cols_sort].sort_values(by='Model')[:10]"
+      ],
+      "metadata": {
+        "id": "IFHZe_uR6AYQ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The first 4 lines are duplicated, they represents the same boat. However in this database the price is changing. Keep in mind that in some database all values of features could change / evolve.\n",
+        "\n",
+        "Given the fact that we are trying to predict the price of boats given their characteristics, we could take the most recent price, we could take a random price within the existing ones, here, we will use the average price.\n",
+        "\n",
+        "The problem is that the Price is not in the same currency and it is not in a numerical features so we need to transform it."
+      ],
+      "metadata": {
+        "id": "OSsZERlm6JFA"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "r6zrQeHu6Is-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "Lwp_P5696IbR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "zwjBi36n6H_-"
+      }
     }
   ]
 }
