--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled0.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNp3JQqMebdeYQ8XAdiVNFy",
+      "authorship_tag": "ABX9TyNa9CDWZxwb9jTzq9f0UwKd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3034,7 +3034,7 @@
       "metadata": {
         "id": "oLuYs5j92fpl"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3193,7 +3193,7 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "train_val['Price'].unique()"
       ],
       "metadata": {
         "id": "r6zrQeHu6Is-"
@@ -3204,7 +3204,8 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "# First, delete the price having the value `Price on request`\n",
+        "train_val = train_val[train_val['Price'] != 'Price on request']"
       ],
       "metadata": {
         "id": "Lwp_P5696IbR"
@@ -3213,13 +3214,59 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
-        ""
+        "# Create a conversion table\n",
+        "create_change = {'Currency_A': ['EUR', 'GBP', 'DKK', 'SEK', 'USD', 'CHF'], \n",
+        "               'Currency_B': ['CHF', 'CHF', 'CHF', 'CHF', 'CHF', 'CHF'], \n",
+        "               'Change': [1.05, 1.24, 0.14, 0.11, 0.92, 1]}\n",
+        "\n",
+        "change = pd.DataFrame(data=create_change)\n",
+        "change"
       ],
       "metadata": {
-        "id": "zwjBi36n6H_-"
-      }
+        "id": "rF8f47Z-CS2Y"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dict_change = dict(zip(change.iloc[:,0], change.iloc[:,2]))\n",
+        "dict_change"
+      ],
+      "metadata": {
+        "id": "Tu27q019CZSH"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data_part = initial_price_feature.str.partition(' ')         # exemple : EUR 3.490,-  -> ('EUR', ' ', '3.490,-')\n",
+        "    \n",
+        "    # Remplace '£' par 'GBP' pour le dictionnaire de change\n",
+        "data_part[0] = data_part[0].str.replace('£', 'GBP')          # data_part[0] = première colonne du DataFrame qui stock la première valeur des tuples\n",
+        "    \n",
+        "    # supprime le '.' qui sépare les milliers dans le prix        \n",
+        "data_part[2] = data_part[2].str.replace('.', '')             # data_part[2] = troisième colonne du DataFrame qui stock la dernière valeur des tuples\n",
+        "    \n",
+        "    # supprime le ',-' pour obtenir un prix\n",
+        "data_part[2] = data_part[2].str.replace(',-', '')\n",
+        "    \n",
+        "    # Converti la colonne en float pour pouvoir faire la conversion\n",
+        "data_part[2] = data_part[2].astype(float, errors = 'raise')\n",
+        "    \n",
+        "    # Convertion du prix\n",
+        "new_price = data_part.apply(lambda x: dict_change[x[0]] * x[2], axis=1)"
+      ],
+      "metadata": {
+        "id": "UP5_MlN0Cflx"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
