--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled0.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNa9CDWZxwb9jTzq9f0UwKd",
+      "authorship_tag": "ABX9TyO5LqlAUd9fdfaZkk5s+zwb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,7 +53,7 @@
       ],
       "metadata": {
         "id": "Z9gDnf030qMY",
-        "outputId": "1cef8708-6d29-4bee-9cc5-84cf71edb7b0",
+        "outputId": "c0a4017b-21d9-4b0d-d17c-b1b40ab6b2a8",
         "colab": {
           "resources": {
             "http://localhost:8080/nbextensions/google.colab/files.js": {
@@ -70,10 +70,10 @@
             }
           },
           "base_uri": "https://localhost:8080/",
-          "height": 247
+          "height": 246
         }
       },
-      "execution_count": 9,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "display_data",
@@ -83,9 +83,9 @@
             ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-53edc749-d6d3-460d-b084-92fa5a21c660\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-05b02e62-9cd4-4ada-b004-5751deab4280\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-53edc749-d6d3-460d-b084-92fa5a21c660\">\n",
+              "     <output id=\"result-05b02e62-9cd4-4ada-b004-5751deab4280\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -101,12 +101,12 @@
             "Saving kaggle.json to kaggle.json\n",
             "Downloading red-wine-quality-cortez-et-al-2009.zip to /content\n",
             "  0% 0.00/25.6k [00:00<?, ?B/s]\n",
-            "100% 25.6k/25.6k [00:00<00:00, 21.9MB/s]\n",
+            "100% 25.6k/25.6k [00:00<00:00, 15.7MB/s]\n",
             "Archive:  red-wine-quality-cortez-et-al-2009.zip\n",
             "  inflating: winequality-red.csv     \n",
             "Downloading large-boatyacht-pricing-dataset.zip to /content\n",
-            "  0% 0.00/6.22M [00:00<?, ?B/s]\n",
-            "100% 6.22M/6.22M [00:00<00:00, 258MB/s]\n",
+            " 80% 5.00M/6.22M [00:00<00:00, 44.9MB/s]\n",
+            "100% 6.22M/6.22M [00:00<00:00, 53.6MB/s]\n",
             "Archive:  large-boatyacht-pricing-dataset.zip\n",
             "  inflating: boat_dataset.csv        \n"
           ]
@@ -904,7 +904,7 @@
       "metadata": {
         "id": "bZnhBd9FTfR1"
       },
-      "execution_count": 10,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -915,7 +915,7 @@
       "metadata": {
         "id": "lrvkG1aLU5L4"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -927,7 +927,7 @@
       "metadata": {
         "id": "KQJ2ZFC9U6eY"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1008,7 +1008,7 @@
           "height": 565
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2112,7 +2112,7 @@
           "height": 1000
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2962,6 +2962,81 @@
     {
       "cell_type": "code",
       "source": [
+        "import pandas as pd\n",
+        "import io\n",
+        "import numpy as np\n",
+        "pd.options.display.max_columns = 100\n",
+        "pd.options.display.max_rows = 50\n",
+        "df = pd.read_csv('/content/boat_dataset.csv', encoding='latin1')\n",
+        "\n",
+        "df = pd.read_csv(io.StringIO(open('/content/boat_dataset.csv', 'rb').read().decode('utf-8', errors='ignore')), sep=\",\")\n",
+        "#df.head()\n",
+        "\n",
+        "## Add element in the database for EDUCATIONAL PURPOSE ONLY\n",
+        "# Add random date in order to do a proper temporal split\n",
+        "df['Advertisement Date'] = pd.to_datetime(df['Advertisement Date'], format='%d.%m.%Y')\n",
+        "#Here is a function that will automatically create a feature of random dates between a defined interval\n",
+        "def random_datetimes_or_dates(start, end, out_format='datetime', n=10): \n",
+        "\n",
+        "    '''   \n",
+        "    unix timestamp is in ns by default. \n",
+        "    I divide the unix time value by 10**9 to make it seconds \n",
+        "    (or 24*60*60*10**9 to make it days).\n",
+        "    The corresponding unit variable is passed to \n",
+        "    the pd.to_datetime function. \n",
+        "    Values for the (divide_by, unit) pair to select is defined by \n",
+        "    the out_format parameter.\n",
+        "    for 1 -> out_format='datetime'\n",
+        "    for 2 -> out_format=anything else\n",
+        "    '''\n",
+        "    (divide_by, unit) = (10**9, 's') if out_format=='datetime' else (24*60*60*10**9, 'D')\n",
+        "\n",
+        "    start_u = start.value//divide_by\n",
+        "    end_u = end.value//divide_by\n",
+        "\n",
+        "    return pd.to_datetime(np.random.randint(start_u, end_u, n), unit=unit)\n",
+        "\n",
+        "\n",
+        "np.random.seed(893717398)\n",
+        "# Set parameters\n",
+        "d_start = pd.to_datetime('2020-01-01')\n",
+        "d_end = pd.to_datetime('2021-12-31')\n",
+        "\n",
+        "# Delete initial Advertisement Date -> if you want to keep the inital dates, don't run it\n",
+        "df.drop(columns=['Advertisement Date'], inplace=True)\n",
+        "\n",
+        "# Run function\n",
+        "df['Advertisement Date'] = random_datetimes_or_dates(d_start, d_end, out_format='datetime', n=len(df))\n",
+        "\n",
+        "# Keep the date and remove the time\n",
+        "df['Advertisement Date']= df['Advertisement Date'].dt.date\n",
+        "\n",
+        "# Parse the date\n",
+        "df['Advertisement Date'] = pd.to_datetime(df['Advertisement Date'], format='%Y-%m-%d')\n",
+        "\n",
+        "# Impute Advertissement Date by the the created one when they are missing\n",
+        "#df['Advertisement Date'] = np.where(df['Advertisement Date'].isna(), df['date2'], df['Advertisement Date'])\n",
+        "\n",
+        "# Delete the random date created\n",
+        "#df.drop(columns=['date2'], inplace=True)\n",
+        "\n",
+        "# Create duplicates\n",
+        "temp = df.sample(n=500, random_state=893717398)\n",
+        "df = df.append(temp)\n",
+        "del(temp)\n",
+        "df.reset_index(drop=True, inplace=True)\n",
+        "\n",
+        "df['Advertisement Date'] = df['Advertisement Date'].astype(str)\n"
+      ],
+      "metadata": {
+        "id": "dksdNQv-5hZx"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Need to parse the date\n",
         "# For the moment, python understand Advertisement Date as a chain of characters\n",
         "# You need to tell him that this is a Date\n",
@@ -2970,7 +3045,7 @@
       "metadata": {
         "id": "8YyCde9APXuL"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2985,7 +3060,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3018,7 +3093,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3091,7 +3166,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3123,7 +3198,7 @@
       "metadata": {
         "id": "oLuYs5j92fpl"
       },
-      "execution_count": 21,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -3145,7 +3220,7 @@
       "metadata": {
         "id": "lR2dD8CT2nhn"
       },
-      "execution_count": 22,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -3164,7 +3239,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3228,7 +3303,7 @@
       "metadata": {
         "id": "cRb7Tstw3Twp"
       },
-      "execution_count": 24,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -3242,7 +3317,7 @@
       "metadata": {
         "id": "zvu9d6Gl3WbF"
       },
-      "execution_count": 25,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -3260,7 +3335,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3311,7 +3386,7 @@
       "metadata": {
         "id": "xVTvSoRL3jAm"
       },
-      "execution_count": 27,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -3326,7 +3401,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3363,7 +3438,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3403,7 +3478,7 @@
           "height": 791
         }
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4070,7 +4145,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4094,7 +4169,7 @@
       "metadata": {
         "id": "Lwp_P5696IbR"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -4116,7 +4191,7 @@
           "height": 237
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4293,7 +4368,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
